// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentRegistry .resolve method should add an HOC that makes background green 1`] = `
<View
  style={
    Object {
      "backgroundColor": "green",
    }
  }
/>
`;

exports[`ComponentRegistry .resolve method should add an HOC with its arguments that makes background orange 1`] = `
<View
  style={
    Object {
      "backgroundColor": "orange",
    }
  }
/>
`;

exports[`ComponentRegistry .resolve method should resolve a Promised component 1`] = `
<BlueBaseApp
  components={
    Object {
      "Foo": Promise {
        "_40": 0,
        "_55": [Function],
        "_65": 1,
        "_72": null,
      },
    }
  }
>
  <Component>
    <Text>
      Loading
    </Text>
  </Component>
</BlueBaseApp>
`;

exports[`ComponentRegistry .resolve method should resolve a Promised component 2`] = `
<BlueBaseApp
  components={
    Object {
      "Foo": Promise {
        "_40": 0,
        "_55": [Function],
        "_65": 1,
        "_72": null,
      },
    }
  }
>
  <BlueBaseRoot>
    <ThemeProvider>
      <SystemApp>
        <ThemedComponent>
          <SystemApp>
            <Foo>
              <ThemedComponent>
                <Component>
                  <Text>
                    Some text
                  </Text>
                </Component>
              </ThemedComponent>
            </Foo>
          </SystemApp>
        </ThemedComponent>
      </SystemApp>
    </ThemeProvider>
  </BlueBaseRoot>
</BlueBaseApp>
`;

exports[`ComponentRegistry .resolve method should resolve a component 1`] = `null`;
